<resources>
    <string name="app_name">Soke</string>
    <string name="act_1">Activity 1</string>
    <string name="button1">Go to Activity 2</string>
    <string name="act_2">Activity 2</string>
    <string name="numero1">1</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="select_style">SELECT YOUR MUSIC STYLE</string>
    <string name="SOKE">SOKE</string>
    <string name="ELECTRO">ELECTRO</string>
    <string name="ROCK">ROCK</string>
    <string name="FUNK">FUNK</string>
    <string name="REGGAE">REGGAE</string>
    <string-array name="fest_electro_list">
        <item>mainsquare</item>
        <item>hellfest</item>
        <item>vieillescharrues</item>
        <item>rockenseine</item>
        <item>garorock</item>
        <item>dreamnation</item>
    </string-array>
    <string name="navigtion_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>